--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,12 @@
           <source>1.7</source>
           <target>1.7</target>
         </configuration>
-      </plugin>     
+      </plugin>
+      <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-war-plugin</artifactId>
+         <version>3.3.1</version>
+      </plugin>
     </plugins>
   </build>
 
